--- a/ManyWords/MainPage.xaml
+++ b/ManyWords/MainPage.xaml
@@ -89,7 +89,7 @@
                                 <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Status}" Margin="25,0,0,0" 
                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
 
-                                <Button  Grid.Row="0" Grid.RowSpan="2" Grid.Column="1">
+                                <Button  Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" Command="{Binding Train}">
                                     <Button.Template>
                                         <ControlTemplate>
                                             <Rectangle Grid.Column="0" Margin="0,0,15,0"
