--- a/ManyWords/Views/WordsView.xaml
+++ b/ManyWords/Views/WordsView.xaml
@@ -54,7 +54,8 @@
 
 
                             <!--Word spelling-->
-                            <TextBlock Grid.Row="0" Grid.Column="0"                                        
+                            <TextBlock Grid.Row="0" Grid.Column="0"
+                                       Name="txtSpellingInWordView"
                                        Margin="0,0,0,0"
                                        HorizontalAlignment="Left"
                                        Text="{Binding Spelling}" 
@@ -124,10 +125,9 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBox x:Name="txtSearch" Grid.Column="0" TextInput="txtSearch_TextInput" 
-                                 TextInputUpdate="txtSearch_TextInputUpdate" 
-                                 TextChanged="txtSearch_TextChanged" HorizontalAlignment="Stretch" />
+                                 HorizontalAlignment="Stretch" />
 
-                        <Button Grid.Column="1">
+                        <Button Grid.Column="1" Click="SearchButton_Click">
                             <Button.Template>
                                 <ControlTemplate>
                                     <Grid Background="Transparent">
