--- a/ManyWords/Views/WordsView.xaml
+++ b/ManyWords/Views/WordsView.xaml
@@ -144,11 +144,14 @@
                             </Button.Template>
                         </Button>
                     </Grid>
-                </StackPanel>
+                    </StackPanel>
             </controls:Pivot.Title>
             <!--Pivot item one-->
             <controls:PivotItem Header="{Binding Path=AppResources.WordsView_All, Source={StaticResource LocalizedStrings}}">
-                <ListBox Margin="0,0,0,0" Name="allList" ItemsSource="{Binding All}" ItemContainerStyle="{StaticResource ListBoxWordViewStyle}" />
+                <Grid>
+                <ListBox Margin="0,0,0,0" Name="allList" ItemsSource="{Binding All}" ItemContainerStyle="{StaticResource ListBoxWordViewStyle}" LayoutUpdated="allList_LayoutUpdated" />
+                <toolkit:PerformanceProgressBar Margin="0,10,0,0" x:Name="performanceProgressBar" Visibility="Visible" VerticalAlignment="Center"/>
+                </Grid>
             </controls:PivotItem>
 
             <!--Pivot item two-->
@@ -161,6 +164,8 @@
                 <ListBox Margin="0,0,-12,0" ItemsSource="{Binding Learned}" ItemContainerStyle="{StaticResource ListBoxWordViewStyle}"/>
             </controls:PivotItem>
         </controls:Pivot>
+
+        
     </Grid>
 
 </phone:PhoneApplicationPage>
